<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">
    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.cupcake.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_userInfoFragment"
            app:destination="@id/userInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/userInfoFragment"
        android:name="com.example.cupcake.UserInfoFragment"
        android:label="@string/user_info"
        tools:layout="@layout/fragment_user_info">
        <action
            android:id="@+id/action_userInfo_to_education"
            app:destination="@id/EducationFragment" />
        <action
            android:id="@+id/action_flavorFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/EducationFragment"
        android:name="com.example.cupcake.EducationFragment"
        android:label="@string/education"
        tools:layout="@layout/fragment_education">
        <action
            android:id="@+id/action_pickupFragment_to_summaryFragment"
            app:destination="@id/experienceFragment" />
        <action
            android:id="@+id/action_pickupFragment_to_userInfoFragment"
            app:destination="@id/userInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/experienceFragment"
        android:name="com.example.cupcake.ExperienceFragment"
        android:label="@string/Experience"
        tools:layout="@layout/fragment_user_experience" />
</navigation>