<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ExperienceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/blur_dots" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_skill"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_skill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/skill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_exp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_skill"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_exp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/experience" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_exp_salary"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_regular"
            android:text="@string/exp_salary"
            app:layout_constraintBottom_toBottomOf="@+id/til_exp_salary"
            app:layout_constraintStart_toStartOf="@id/til_exp"
            app:layout_constraintTop_toTopOf="@+id/til_exp_salary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_exp_salary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_exp_salary"
            app:layout_constraintTop_toBottomOf="@+id/til_exp"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_exp_salary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/exp_salary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_posting_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/dmsans_regular"
            android:text="@string/posting_date"
            app:layout_constraintStart_toStartOf="@id/til_exp"
            app:layout_constraintTop_toBottomOf="@+id/til_exp_salary" />

        <TextView
            android:id="@+id/tv_birth_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:drawableRight="@drawable/ic_baseline_calendar_today_24"
            android:fontFamily="@font/dmsans_regular"
            android:gravity="center_vertical"
            android:hint="@string/posting_date"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_posting_date"
            app:layout_constraintEnd_toEndOf="@+id/til_exp_salary"
            app:layout_constraintStart_toEndOf="@+id/tv_posting_date"
            app:layout_constraintTop_toTopOf="@+id/tv_posting_date" />

        <Button
            android:id="@+id/cancel_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/next_button"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/next_button" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/side_margin"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="40dp"
            android:text="@string/expose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>